--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -90,77 +90,17 @@
 				<div class="main-banner">						
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
-							<!-- 
-							<div class="swiper-slide">
-								<img src="resources/img/banner-1.jpg" />
-								<div class="mab-text">
-									<div class="mb-box">
-										<div class="mab-title">작가</div>
-										<h2>MeME (b. 1983)</h2>
-										<p class="mab-p1">WITH LOVE #4 (edition10),</p>
-										<p class="mab-p2">35x35cm,  Lenticular & mixed media, 2021</p>
-									</div>
-								</div>
-							</div> 
-							-->
 							
 							<!-- 이벤트 베너 2022-07-22 -->
 							<div class="swiper-slide" align="center" style="background-color:#31DBD2;">
-								<img src="resources/img/banner-14_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+								<img src="resources/img/banner-11_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
 							</div>
-							<!-- 
-							<div class="swiper-slide" align="center" style="background-color:#90D4D3;">
-								<img src="resources/img/banner-11_pc.jpg" onclick="javascript:location.href='/totalSearch_work?searchKeyword=사전출품';" style="cursor:pointer;"/>
-								<div class="mab-text">
-									<div class="mb1-box">
-										<div class="mb1-title" onclick="javascript:location.href='/totalSearch_work?searchKeyword=사전출품';" style="cursor:pointer;">사전출품작보러가기</div>
-										<div class="mb1-title2">GRAND OPEN</div>
-										<div class="mb1-title3">오픈 기념 수수료 할인 이벤트</div>
-										<div class="mb1-title4">판매자 3%, 구매자 6%</div>
-									</div>
-								</div>
-							</div>
-							 -->
 							<div class="swiper-slide" align="center" style="background-color:#ececec;">
 								<img src="resources/img/banner-12_pc.jpg" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
-								<!-- <div class="mab-text">
-									<div class="mb2-box">
-										<div class="mb2-logo"><img src="resources/img/banner_logo1.png"></div>
-										<div class="mb2-text1">
-											<li>개인간 미술품 거래 플랫폼 딜링아트 서비스 안내</li>
-											<li>현장방문시 딜링아트 오픈기념 운송료 5만원 쿠폰 지급<img src="resources/img/banner_ico1.png"></li>
-										</div>
-									</div>
-									<div class="mb3-box">
-										<div class="mb3-text1">
-											<li>대구 엑스코 서관 1, 2홀</li>
-											<li>2022.6.23 ~ 6.26</li>
-											<li>6.23 ONLY VIP & PRESS 프리뷰</li>
-										</div>
-									</div>
-								</div> -->
 							</div>
 							<div class="swiper-slide" align="center" style="background-color:#fe4d01;">
 								<img src="resources/img/banner-13_pc.jpg" onclick="javascript:location.href='/media';" style="cursor:pointer;"/>
-								<!-- <div class="mab-text">
-									<div class="mb2-box">
-										<div class="mb2-logo"><img src="resources/img/banner_logo1.png"></div>
-										<div class="mb2-text1">
-											<li>개인간 미술품 거래 플랫폼 딜링아트 서비스 안내</li>
-											<li>현장방문시 딜링아트 오픈기념 운송료 5만원 쿠폰 지급<img src="resources/img/banner_ico1.png"></li>
-										</div>
-									</div>
-									<div class="mb3-box">
-										<div class="mb3-text1">
-											<li>대구 엑스코 서관 1, 2홀</li>
-											<li>2022.6.23 ~ 6.26</li>
-											<li>6.23 ONLY VIP & PRESS 프리뷰</li>
-										</div>
-									</div>
-								</div> -->
 							</div>
-							
-							
 							
 						</div>
 						<div class="swiper-pagination swpa-1"></div>
@@ -175,7 +115,7 @@
 						<div class="swiper-wrapper">
 							<!-- 이벤트 베너 2022-07-22 -->
 							<div class="swiper-slide">
-								<img src="resources/img/banner-14_tablet.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+								<img src="resources/img/banner-11_tablet.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
 							</div>
 							<!--
 							<div class="swiper-slide">
@@ -225,62 +165,12 @@
 					</div>
 				</div>
 			</div>
-			<!-- 모바일일때 -->
-			<div class="contents mo-nav">
-				<nav>
-					<li><a href="/deal">Deal</a></li>
-					<li><a href="/insights">Mgz9</a></li>
-					<li><a href="/artist">Artist Library</a></li>
-					<li><a href="/serviceIntro">About</a></li>
-				</nav>
-			</div>
 			
-			<!-- 진행 순서 -->
-			<div class="contents bg-1">
-				<div class="da-snm">
-					<ul class="">
-						<li>
-							<img src="resources/img/img-1.png" />
-							<p class="da-p1">안전한 거래</p>
-							<p class="da-p2 pc-on">딜링아트를 통한 거래는<br/>안전합니다.</p>
-							<p class="da-p2 ta-on">딜링아트를 통한<br/>거래는 안전합니다.</p>
-						</li>
-						<li>
-							<img src="resources/img/img-2.png" />
-							<p class="da-p1">공개경매</p>
-							<p class="da-p2 pc-on">경매 진행 현황을<br/>실시간으로 확인하세요.</p>
-							<p class="da-p2 ta-on">경매 진행 현황을<br/>실시간으로 확인하세요.</p>
-						</li>
-						<li>
-							<img src="resources/img/img-3.png" />
-							<p class="da-p1">온라인 결제</p>
-							<p class="da-p2 pc-on">번거로운 작품 거래. 더 이상<br/>직접 움직일 필요가 없습니다.</p>
-							<p class="da-p2 ta-on">번거로운 작품 거래<br/>간편하게 결재하시요.</p>
-						</li>
-						<li>
-							<img src="resources/img/img-4.png" />
-							<p class="da-p1">저렴한 수수료</p>
-							<p class="da-p2 pc-on">비상식적인 미술품 거래 수수료<br/>거품을 제거했습니다.</p>
-							<p class="da-p2 ta-on">비상식적인 미술품 거래<br/>거품을 제거했습니다.</p>
-						</li>
-						<li>
-							<img src="resources/img/img-5.png" />
-							<p class="da-p1">간편 작품 등록</p>
-							<p class="da-p2 pc-on">보증서만 업로드 하면<br/>딜링아트에서 입력해 드립니다.</p>
-							<p class="da-p2 ta-on">보증서만 업로드 하면<br/>정보를 입력해 드립니다.</p>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<!-- 유투브 홍보 영상 -->
-			<div class="contents max-1500" style="text-align: center; padding-top:50px;">
-				<iframe class="iframe-size" src="https://www.youtube.com/embed/3amrd9Q1Cns" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
 			
 			<!-- hotest deal 스와이퍼 -->
 			<div class="contents max-1500 hotestDeal">
 				<div class="cont-title">
-					<h3>Hot deal</h3>
+					<h3>Closing Soon</h3>
 				</div>
 				<div class="swi-box">
 					<div class="swiper mySwiper2">
@@ -291,24 +181,95 @@
 						<div class="swiper-pagination swpa-2 pc-no"></div>	
 					</div>	
 					
-					
 					<div class="swiper-button-next InPrevSwiper2 sbn ta-no"><span><img src="resources/img/arr-r.jpg"></span></div>
 					<div class="swiper-button-prev InNextSwiper2 sbp ta-no"><span><img src="resources/img/arr-l.jpg"></span></div>
 					
 				</div>
-				
-				
-					
-				
+			</div>
+			
+			<!-- 유투브 홍보 영상 -->
+			<!-- <div class="contents max-1500" style="text-align: center; padding-top:50px;">
+				<iframe class="iframe-size" src="https://www.youtube.com/embed/3amrd9Q1Cns" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div> -->
+			<div class="youtube-box">
+				<div class="iframe-sum">
+					<div class="ifb-left">
+						<h3>작가와 콜렉터<br />콜렉터와 콜렉터<br />온라인 미술품 직거래는</h3>
+						<img src="resources/img/logo2.png" class="ifb-img" />
+					</div>
+					<div class="iframe-box">
+						<h3>미술품 거래 왜 이렇게 복잡한가요? </h3>
+						<iframe width="100%" height="100%" src="https://www.youtube.com/embed/3amrd9Q1Cns" title="미술품 직거래 플랫폼 딜링아트 Dealing art" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+				<div class="da-box">
+					<div class="da-snm">
+						<ul class=""><!-- 0808 da-p1 이부분 추가했습니다 -->
+							<li>
+								<img src="resources/img/img-1.png" />
+								<p class="da-p1 pc-on">안전한 거래</p>
+								<p class="da-p1 ta-on">안전한<br/>거래</p>
+								<p class="da-p2 pc-on">딜링아트를 통한 거래는<br/>안전합니다.</p>
+								<p class="da-p2 ta-on">딜링아트를 통한<br/>거래는 안전합니다.</p>
+							</li>
+							<li>
+								<img src="resources/img/img-2.png" />
+								<p class="da-p1 pc-on">공개경매</p>
+								<p class="da-p1 ta-on">공개<br/>경매</p>
+								<p class="da-p2 pc-on">경매 진행 현황을<br/>실시간으로 확인하세요.</p>
+								<p class="da-p2 ta-on">경매 진행 현황을<br/>실시간으로 확인하세요.</p>
+							</li>
+							<li>
+								<img src="resources/img/img-3.png" />
+								<p class="da-p1 pc-on">온라인 결제</p>
+								<p class="da-p1 ta-on">온라인<br/>결제</p>
+								<p class="da-p2 pc-on">번거로운 작품 거래. 더 이상<br/>직접 움직일 필요가 없습니다.</p>
+								<p class="da-p2 ta-on">번거로운 작품 거래<br/>간편하게 결재하시요.</p>
+							</li>
+							<li>
+								<img src="resources/img/img-4.png" />
+								<p class="da-p1 pc-on">저렴한 수수료</p>
+								<p class="da-p1 ta-on">저렴한<br/>수수료</p>
+								<p class="da-p2 pc-on">비상식적인 미술품 거래 수수료<br/>거품을 제거했습니다.</p>
+								<p class="da-p2 ta-on">비상식적인 미술품 거래<br/>거품을 제거했습니다.</p>
+							</li>
+							<li>
+								<img src="resources/img/img-5.png" />
+								<p class="da-p1 pc-on">간편한 등록</p>
+								<p class="da-p1 ta-on">간편한<br/>등록</p>
+								<p class="da-p2 pc-on">보증서만 업로드 하면<br/>딜링아트에서 입력해 드립니다.</p>
+								<p class="da-p2 ta-on">보증서만 업로드 하면<br/>정보를 입력해 드립니다.</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			
+			<!-- New deal --> <!-- 0808 -->
+			<div class="contents max-1500">
+				<div class="cont-title">
+					<h3>New Deal</h3>
+				</div>
+				<div class="swi-box">
+					<div class="swiper mySwiper3">
+						<div class="swiper-wrapper" id="newDeal"></div>
+						<div class="swiper-pagination swpa-2 pc-no"></div>
+					</div>
+					<div class="swiper-button-next InNextSwiper3 sbn ta-no"><span><img src="resources/img/arr-r.jpg"></span></div>
+					<div class="swiper-button-prev InPrevSwiper3 sbp ta-no"><span><img src="resources/img/arr-l.jpg"></span></div>
+				</div>
+				<!-- <div class="text-center">
+					<button type="button" class="btn-more ta-no"><span>more</span></button>
+				</div> -->
 			</div>
 			
 			<!-- Dealing Art Insights -->
 			<div class="contents max-1500  DealingArtInsights">
 				<div class="cont-title ta-t60">
 					<!-- <h3>Dealing Art <span class="ta-no"><br/></span>Insights</h3> -->
-					<h3>Magazine9</h3>
+					<h3>Magazine<span style="color:red">9</span></h3>
 				</div>
-				<div class="swi-box">
+				<div class="cns-div swi-box">
 					
 					
 					
@@ -327,6 +288,21 @@
 			    	
 				</div>
 				
+			</div>
+			
+			<!-- Updated artist--> <!-- 0808 -->
+			<div class="contents max-1500">
+				<div class="cont-title ta-t60">
+					<h3>Updated artist</h3>
+				</div>
+				<div class="cns-div swi-box">
+				
+					<div class="swiper mySwiper4">
+						<div class="swiper-wrapper cn-b" id="updatedArtist"></div>
+					</div>
+					<div class="swiper-button-next  InNextSwiper4 sbn ta-no"><span><img src="resources/img/arr-r.jpg"></span></div>
+					<div class="swiper-button-prev  InPrevSwiper4 sbp ta-no"><span><img src="resources/img/arr-l.jpg"></span></div>
+				</div>
 			</div>
 			
 		 
@@ -456,6 +432,8 @@
 	var mainHotest = {};
 	var mainTodayBid = {};
 	var mainInsights = {};
+	var mainNewDeal = {};
+	var mainUpdatedArtist = {};
 	
 	var page = 1;
 	
@@ -472,17 +450,6 @@
 	 	    function(){ $(this).removeClass('gis') }
 	 	  )
 	 	searchMainData(page);
-	});
-	
-	$(function() {                      
-		  $(".bab-bo").click(function() { 
-		    $(this).toggleClass("bashow");     
-		  });
-		  
-		  $(".lg-my").click(function() { 
-		    $('.bg-sh').toggleClass('bg-show');     
-		 	 $('.s-hov').toggleClass('s-hov-show');     
-		  });
 	});
 	
 	  var myArray = ["01","02","03","04","05","06","07","08","09"];
@@ -513,10 +480,10 @@
 	  var swiper = new Swiper(".mySwiper2", {
 		   slidesPerView: "auto",
 		   loop: false,
-		   autoplay: {
+		   /* autoplay: {
 		          delay: 3000,
 		          disableOnInteraction: false,
-		   },
+		   }, */
 			navigation: {
 				 nextEl: ".InNextSwiper2",
 				 prevEl: ".InPrevSwiper2",
@@ -534,15 +501,16 @@
 					loop: false,
 					effect: 'slide',
 					navigation: {
-						 nextEl: ".swiper-button-next",
-						 prevEl: ".swiper-button-prev",
+						 nextEl: ".InPrevSwiper2",
+						 prevEl: ".InNextSwiper2",
 					},
 				});
 			} else if (ww < 1200) {
 				// 2
 				swiper = new Swiper('.mySwiper2', {
 					slidesPerView: 1,
-					loop: true
+					loop: false
+					
 				});
 			}
 		}
@@ -552,9 +520,12 @@
 	  var mySwiperInNum = 5
 	  var swiper = new Swiper(".mySwiperIn", {
 	    	   
-	    	slidesPerView: "auto",
-			loop: false,
-			effect: 'slide',
+		  	slidesPerView: "auto",
+		   	loop: false,
+		   /* 	autoplay: {
+		      	    delay: 3000,
+		       	  	disableOnInteraction: false,
+		   	}, */
 			navigation: {
 				 nextEl: ".InNext",
 				 prevEl: ".InPrev",
@@ -591,7 +562,97 @@
 		}
 	  
 	    /* 두번째 배너  */    	  
-	       	  
+	    
+	  /* 세번째 배너  */
+	  var mySwiper3Num = 4;
+	  var swiper = new Swiper(".mySwiper3", {
+		   slidesPerView: "auto",
+		   loop: false,
+		   /* autoplay: {
+		          delay: 3000,
+		          disableOnInteraction: false,
+		   }, */
+			navigation: {
+				 nextEl: ".InNextSwiper3",
+				 prevEl: ".InPrevSwiper3",
+			},
+    	     
+	    });
+	    
+	    responsiveSwiper3(mySwiper3Num);
+	    
+	    function responsiveSwiper3(mySwiper3Num) {
+			
+	    	if (ww >= 1200) {
+				
+				swiper = new Swiper('.mySwiper3', {
+					slidesPerView: mySwiper3Num,
+					loop: false,
+					effect: 'slide',
+					navigation: {
+						 nextEl: ".InNextSwiper3",
+						 prevEl: ".InPrevSwiper3",
+					},
+					
+				});
+				
+			} else if (ww < 1200) {
+				
+				
+				swiper = new Swiper('.mySwiper3', {
+					slidesPerView: 1,
+					loop: false
+					 
+				});
+			}
+		}
+	    /* 세번째 배너  */   	
+	    
+	  /* 네번째 배너  */
+	  var mySwiper4Num = 5;
+	  var swiper = new Swiper(".mySwiper4", {
+	    	   
+	  		slidesPerView: "auto",
+		   	loop: false,
+		   	/* autoplay: {
+		          	delay: 3000,
+		          	disableOnInteraction: false,
+		   	}, */
+			navigation: {
+				 nextEl: ".InNextSwiper4",
+				 prevEl: ".InPrevSwiper4",
+			},
+    	     
+	    });
+	    
+	    responsiveSwiper4(mySwiper4Num);
+	    
+	    function responsiveSwiper4(mySwiper4Num) {
+			
+	    	if (ww >= 1200) {
+				
+				swiper = new Swiper('.mySwiper4', {
+					slidesPerView: mySwiper4Num,
+					loop: false,
+					effect: 'slide',
+					navigation: {
+						 nextEl: ".InNextSwiper4",
+						 prevEl: ".InPrevSwiper4",
+					},
+					
+				});
+				
+			} else if (ww < 1200) {
+				
+				
+				swiper = new Swiper('.mySwiper4', {
+					slidesPerView: 1,
+					loop: false
+					 
+				});
+			}
+		}
+	    /* 세번째 배너  */ 
 // 	   window.addEventListener('resize', function() {
 // 			ww = window.innerWidth;
 // 			responsiveSwiper();
@@ -667,6 +728,8 @@
 	        	   
 	        	   mainTodayBid = data.mainData.todayBid;
 	        	   mainInsights = data.mainData.insights;
+	        	   mainNewDeal = data.mainData.newDeal;
+	        	   mainUpdatedArtist = data.mainData.updatedArtist;
 	        	   
 	        	   var hotestHtml = '';
 	        	   for(i=0; i<mainHotest.length; i++){
@@ -747,6 +810,37 @@
  	        		   //imgSize(imgId);
 	        	   }
 	        	   $("#columns").append(todayBidHtml).trigger("create"); */
+	        	   var newDealHtml = '';
+	        	   for(j=0; j<mainNewDeal.length; j++){
+			   	       newDealHtml += '<div class="swiper-slide hd-div">';
+					   newDealHtml += '	<a class="hd-div400" href="javascript:void(0);" onclick="workDetail('+mainNewDeal[j].workSq+')">';
+					   newDealHtml += '		<img src="'+mainNewDeal[j].workMainImgUrl+'" class="hd-img" style="width:270px;"/>';
+					   newDealHtml += '		<div class="hd-text">';
+					   newDealHtml += '			<h4>'+mainNewDeal[j].artstActvtyNm+'</h4>';
+				       newDealHtml += '			<div class="hd-d1">'+mainNewDeal[j].workNm +'('+ mainNewDeal[j].workProdcYear+')';
+				       newDealHtml += '         <br/>'+mainNewDeal[j].workMatrl+', '+mainNewDeal[j].workSizeWidth +'x'+ mainNewDeal[j].workSizeDepth+'</div>';
+					   //newDealHtml += '			<div class="hd-d2">낙찰가 3,700,000 원</div>';
+				       newDealHtml += '		</div>';
+					   newDealHtml += '	</a>';
+					   newDealHtml += '</div>';
+	        	   }
+	        	   $("#newDeal").empty();
+	        	   $("#newDeal").append(newDealHtml).trigger("create");
+	        	   
+	        	   var updatedArtistHtml = '';
+	        	   for(k=0; k<mainUpdatedArtist.length; k++){
+	        	       updatedArtistHtml += '<div class="swiper-slide">';
+	        	       updatedArtistHtml += '   <a href="javascript:void(0);" onclick="artstDetail('+mainUpdatedArtist[k].artstSq+')">';
+					   updatedArtistHtml += '	    <div class="cns-box3">';
+					   updatedArtistHtml += '		   <img src="'+mainUpdatedArtist[k].artstProfileImgUrl+'"/>';
+					   updatedArtistHtml += '   	   <h4 style="text-align:center; padding-top:10px;">'+mainUpdatedArtist[k].artstActvtyNm+'</h4>';
+					   updatedArtistHtml += '	    </div>';
+					   updatedArtistHtml += '   </a>';
+					   updatedArtistHtml += '</div>';
+	        	   }
+	        	   $("#updatedArtist").empty();
+	        	   $("#updatedArtist").append(updatedArtistHtml).trigger("create");
+	        	   
 	        	   
 	           },
 	           error: function(error) {
@@ -756,8 +850,12 @@
 	}
     //응찰하기 페이지로 이동
     function workDetail(workSq){
-  		window.location.href = "/bidding?workSq="+workSq;
+  		location.href = "/bidding?workSq="+workSq;
   	}
+    
+    function artstDetail(artstSq){
+    	location.href = "/artistDetail?artstSq="+artstSq;
+    }
   	/*
      * MGZ9 상세 조회
      * PARAM : #MGZ_SQ
@@ -893,6 +991,8 @@
  	 if(mloginUrl =="/mlogin" ){
  		$('#loginModal').modal('show');
  	 }
+ 	
+ 	 
  	
  	
 </script>
